--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ body {
 
 /* HOMEPAGE SETTINGS */
 
-.homepage {
-	display: none;
-}
-
 .home-header {
 	position: fixed;
 	width: 100vw;
@@ -189,8 +185,9 @@ body {
 	align-items: center;
 	height: 2rem;
 	position: fixed;
+	top: 0;
 	overflow: hidden;
-	z-index: 5;
+	z-index: 2;
 	background-color: white;
 }
 
@@ -247,8 +244,13 @@ body {
 
 /* CATEGORY */
 
+.category{
+	margin: 2rem 0;
+}
+
 .category-meals p{
  margin: 0;
+ width: 45vw;
 }
 
 .category .cart-icon{
@@ -263,33 +265,65 @@ body {
 	width: 100vw;
 }
 
-.category-meals > div{
-	background-color: #3f4a6c;
-}
 
 .category-meals .meal-wrapper{
-	background-color: white;
-	width: 60vw;
-	margin: auto;
+	background-color: #aaaaaa;
+	margin:auto;
+	padding: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
+.category-meals .image-wrapper {
+	width: 45vw;
+	height: 40vw;
+	position: relative;
+	border-radius: 25%;
+	overflow: hidden;
+}
+
+.meal-wrapper img {
+	height: 100%;
+}
+
+.button-wrapper{
+	width: 45vw;
+	display: flex;
+	justify-content: flex-start;
+}
+
+.category-atc-button{
+	width: 60%;
+	text-align: start;
+	height: 1.2rem;
+	overflow: hidden;
+	position: relative;
+	background-color: #888888;
+	border: none;
+}
+
+.category-atc-button img{
+	position: absolute;
+	right: 0;
+	height: 100%;
+	
+}
+
+
+
 .category footer{
+	background-color: white;
 	text-align: center;
 	position: fixed;
 	bottom: 0;
 	width: 100vw;
 	padding: .5rem;
+	z-index: 2;
 }
 
 /* SIDEBAR SETTINGS */
-
-.sidebar-settings {
-	display: none;
-}
 
 .sidebar-settings-main {
 	width: 85vw;
@@ -315,10 +349,6 @@ body {
 }
 
 /* CART SETTINGS */
-.cart {
-	display: none;
-}
-
 .cart-main-items {
 	width: 85vw;
 	margin: auto;
@@ -376,9 +406,7 @@ body {
 }
 
 /* SCHEDULE SETTINGS */
-.schedule {
-	display: none;
-}
+
 
 .schedule-form {
 	width: 85vw;
@@ -420,9 +448,6 @@ body {
 	flex-direction: column;
 }
 
-.profile {
-	display: none;
-}
 
 .profile-main{
 	margin-bottom: 5rem;
@@ -475,9 +500,6 @@ body {
 	margin: 0;
 }
 
-.unchanged-profile{
-	display: none;
-}
 
 .unchanged-profile > div{
 	background-color: white;
@@ -503,7 +525,6 @@ body {
 
 .meal-fed {
 	display: flex;
-	display: none;
 	flex-direction: column;
 }
 
@@ -546,12 +567,11 @@ body {
 	border: none;
 	position: absolute;
 	right: 0%;
-	z-index: 6;
+	z-index: 1;
 }
 
 .meal-fed form {
 	display: flex;
-	/* display: none; */
 	position: relative;
 	justify-content: center;
 	align-items: center;
